
make editor more friendly

Feature: 

* generate arduino code in textarea, easier to copy source
* auto focus to arduino code area, can use ctrl+a to select correct source
* load source via url param in same site with such "url=xxx" syntax
* include 2 examples
* upload potentiometer control servo video http://www.youtube.com/watch?v=u2Fp0KpWxik
* application cache the block images

change:

* call profile params via 'profile.default.digital' instead of 'profile.arduino.digital'
* rename Potentiometer block to Rotary Angle block
* update blockly till r491, move core js into core folder
* move arduino language generator to top level generator/ folder
* reasonable default) change default delay time from 0 to 1000

Credit: gasolin


0.7 2012/10/18
------------------
code name: SPACE

Story: refine bootstraping process

Feature: 

* promotion video http://www.youtube.com/watch?v=_swiyXcUvNY
* bootstraping sample blocks and document to easily custom blocks.

Change:

* update blockly till 10/18
* from blockly) Move include section always at top of the source file
* move delay block to Control blocks Panel
* move map block to Math blocks panel

fix:

* fix servo move block cascade input issue 

Credit: gasolin


0.6 2012/10/14
-----------------
code name: CASTLE

make BlocklyDuino public to github

Feature:

* code on github
* add grove_temporature_sensor block
* add Serial print block

Change:

* map function can specify the max range value

Refactor:

Fix:

* fix several functions to able to assigned to variables

Credit: gasolin


0.5 2012/10/11
-----------------
code name: CREATOR

support int variables and new blockly syntax

Feature:

* support variable declare statement
* support type declaration for strong type language
  * (currently only support int type)
* can restore blocks
* add for statement

Refactor:

* add board profiles to support different board with ports(current arduino standard-compatible board only)
* support new blockly syntax