@@ -14,6 +14,7 @@ Feature:
 * include 2 examples
 * upload potentiometer control servo video http://www.youtube.com/watch?v=u2Fp0KpWxik
 * application cache the block images
+* add Grove LCD print block
 
 change:
 
